# imx

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  NOTICE  PRODUCTION_READINESS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md
.github/workflows/: rust-fuzz-scheduled.yml  rust-standalone-preview.yml
benches/: throughput.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: completions.rs  main.rs  progressive_jpeg_fixtures.rs
crates/cli/tests/: cli.rs
crates/codecs/bmp/: Cargo.toml  README.md
crates/codecs/bmp/src/: lib.rs
crates/codecs/farbfeld/: Cargo.toml  README.md
crates/codecs/farbfeld/src/: lib.rs
crates/codecs/gif/: Cargo.toml  README.md
crates/codecs/gif/src/: lib.rs
crates/codecs/jpeg/: Cargo.toml  README.md
crates/codecs/jpeg/src/: lib.rs
crates/codecs/png/: Cargo.toml  README.md
crates/codecs/png/src/: lib.rs
crates/codecs/pnm/: Cargo.toml  README.md
crates/codecs/pnm/src/: lib.rs
crates/codecs/ppm/: Cargo.toml
crates/codecs/ppm/src/: lib.rs
crates/codecs/qoi/: Cargo.toml  README.md
crates/codecs/qoi/src/: lib.rs
crates/codecs/tiff/: Cargo.toml  README.md
crates/codecs/tiff/src/: lib.rs
crates/codecs/webp/: Cargo.toml  README.md
crates/codecs/webp/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
docs/: animation-output.md  api-freeze.md  ci-coverage-new-surface.md  color-ops.md  compare.md  exif-orientation.md  gif-output.md  icc.md  multiframe-decode.md  operations-geometry.md  pipeline.md  releasing.md  resampling.md  resize-geometry-shorthand.md  streaming-and-quality.md  tiff-codec.md  v0.10.0-real-photo.md  v0.11.0-progressive-jpeg.md  v0.12.0-curated-corpus.md  v0.12.0-glibc-baseline.md  v0.12.0-real-world-intake.md  v0.13.0-resize.md  v0.14.0-resize-fit.md  v0.15.0-batch-convert.md  v0.16.0-bmp.md  v0.17.0-self-test-diagnostics.md  v0.18.0-json-identify-report.md  v0.19.0-daily-use-corpus.md  v0.5.0-release-ready.md  v0.6.0-compatibility-recommendation.md  v0.6.0-release-ready.md  v0.7.0-high-depth-ppm.md  v0.8.0-png.md  v0.9.0-jpeg.md  v1.0-hardening-audit.md  v1.0-readiness.md  webp-gif-input.md  webp-output-and-batch-quality.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bmp_decode.rs  farbfeld_decode.rs  gif_decode.rs  jpeg_decode.rs  png_decode.rs  pnm_decode.rs  ppm_decode.rs  qoi_decode.rs  tiff_decode.rs  webp_decode.rs
man/: imx.1
packaging/homebrew/: README.md
scripts/: bench-regression.sh  bench-release.sh  check-bench-thresholds.sh  check-glibc-symbols.sh  check-msrv.sh  check-no-hosted-apple-actions.sh  ci.sh  curated-corpus.sh  daily-use-corpus.sh  differential-corpus.sh  generate-conformance-report.sh  generate-homebrew-formula.sh  install.sh  package-release.sh  publish.sh  run-fuzz.sh  seed-fuzz-corpus.sh  smoke-homebrew-formula-generator.sh  smoke-same-format-determinism.sh  verify-install.sh  verify-publishable.sh  verify-release-archive.sh
src/: lib.rs
tests/: curated_corpus.rs  golden.rs  visual_regression.rs
tests/differential/: mod.rs
tests/fixtures/: README.md  bmp-2x2-rgb24-bottom-up.hex  farbfeld-1x1-red-half-alpha.hex  pbm-1x1-black.hex  pgm-1x1-gray.hex  ppm-1x1-red.hex  qoi-1x1-red-half-alpha.hex
tests/malformed/: fuzz_smoke.rs  mod.rs
