[package]
name = "imx-preview"
version = "0.19.0"
edition = "2021"
rust-version = "1.85"
license = "ImageMagick"
publish = false

[workspace]
members = [
  "crates/core",
  "crates/codecs/bmp",
  "crates/codecs/farbfeld",
  "crates/codecs/gif",
  "crates/codecs/jpeg",
  "crates/codecs/png",
  "crates/codecs/pnm",
  "crates/codecs/qoi",
  "crates/codecs/tiff",
  "crates/codecs/webp",
  "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.19.0"
edition = "2021"
rust-version = "1.85"
license = "ImageMagick"
repository = "https://github.com/jskoiz/imx"
homepage = "https://github.com/jskoiz/imx"
publish = true

[workspace.dependencies]
imx-core = { path = "crates/core", version = "0.19.0" }
imx-codec-bmp = { path = "crates/codecs/bmp", version = "0.19.0" }
imx-codec-farbfeld = { path = "crates/codecs/farbfeld", version = "0.19.0" }
imx-codec-gif = { path = "crates/codecs/gif", version = "0.19.0" }
imx-codec-jpeg = { path = "crates/codecs/jpeg", version = "0.19.0" }
imx-codec-png = { path = "crates/codecs/png", version = "0.19.0" }
imx-codec-pnm = { path = "crates/codecs/pnm", version = "0.19.0" }
imx-codec-qoi = { path = "crates/codecs/qoi", version = "0.19.0" }
imx-codec-tiff = { path = "crates/codecs/tiff", version = "0.19.0" }
imx-codec-webp = { path = "crates/codecs/webp", version = "0.19.0" }
kamadak-exif = "0.6.1"

[dependencies]
imx-core = { workspace = true }
imx-codec-bmp = { workspace = true }
imx-codec-farbfeld = { workspace = true }
imx-codec-gif = { workspace = true }
imx-codec-jpeg = { workspace = true }
imx-codec-png = { workspace = true }
imx-codec-pnm = { workspace = true }
imx-codec-qoi = { workspace = true }
imx-codec-tiff = { workspace = true }
imx-codec-webp = { workspace = true }

[dev-dependencies]
jpeg-encoder = "0.7.0"
libc = "0.2"
png = "0.18.1"
image-webp = "0.2.4"
gif = "0.14.2"

[[test]]
name = "differential"
path = "tests/differential/mod.rs"

[[test]]
name = "malformed"
path = "tests/malformed/mod.rs"

[[test]]
name = "fuzz_smoke"
path = "tests/malformed/fuzz_smoke.rs"

[[bench]]
name = "throughput"
path = "benches/throughput.rs"
harness = false
