[package]
name = "imx-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
imx-codec-farbfeld = { path = "../crates/codecs/farbfeld" }
imx-codec-pnm = { path = "../crates/codecs/pnm" }
imx-codec-qoi = { path = "../crates/codecs/qoi" }
libfuzzer-sys = "0.4"

[[bin]]
name = "farbfeld_decode"
path = "fuzz_targets/farbfeld_decode.rs"
test = false
doc = false

[[bin]]
name = "pnm_decode"
path = "fuzz_targets/pnm_decode.rs"
test = false
doc = false

[[bin]]
name = "qoi_decode"
path = "fuzz_targets/qoi_decode.rs"
test = false
doc = false
