[package]
name = "imx-cli"
version = "0.13.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
imx-core = { workspace = true }
imx-codec-farbfeld = { workspace = true }
imx-codec-jpeg = { workspace = true }
imx-codec-png = { workspace = true }
imx-codec-pnm = { workspace = true }
imx-codec-qoi = { workspace = true }

[dev-dependencies]
png = "0.18.1"

[[bin]]
name = "imx"
path = "src/main.rs"
