[package]
name = "imx-cli"
version = "0.19.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
imx-core = { workspace = true }
imx-codec-bmp = { workspace = true }
imx-codec-farbfeld = { workspace = true }
imx-codec-gif = { workspace = true }
imx-codec-jpeg = { workspace = true }
imx-codec-png = { workspace = true }
imx-codec-pnm = { workspace = true }
imx-codec-qoi = { workspace = true }
imx-codec-webp = { workspace = true }
image-webp = "0.2.4"
gif = "0.14.2"

[dev-dependencies]
png = "0.18.1"

[[bin]]
name = "imx"
path = "src/main.rs"
