[package]
name = "imx-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "imx command-line image converter: memory-safe, deterministic format conversions, resize, and geometry ops, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-cli"
keywords = ["image", "conversion", "cli", "convert", "imx"]
categories = ["multimedia::images", "command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
imx-core = { workspace = true }
imx-codec-bmp = { workspace = true }
imx-codec-farbfeld = { workspace = true }
imx-codec-gif = { workspace = true }
imx-codec-jpeg = { workspace = true }
imx-codec-png = { workspace = true }
imx-codec-pnm = { workspace = true }
imx-codec-qoi = { workspace = true }
imx-codec-webp = { workspace = true }
image-webp = "0.2.4"
gif = "0.14.2"

[dev-dependencies]
png = "0.18.1"

[[bin]]
name = "imx"
path = "src/main.rs"
