[package]
name = "imx-core"
version = "0.19.0"
edition.workspace = true
rust-version.workspace = true
publish = true
description = "Memory-safe, deterministic core image model and pixel-format conversions for the imx image toolkit, differentially verified against ImageMagick."
repository = "https://github.com/jskoiz/imx"
homepage = "https://github.com/jskoiz/imx"
documentation = "https://docs.rs/imx-core"
keywords = ["image", "conversion", "png", "jpeg", "cli"]
categories = ["multimedia::images"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"
