[package]
name = "imx-codec-farbfeld"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "farbfeld image decoder and encoder for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-farbfeld"
keywords = ["image", "farbfeld", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
imx-core = { workspace = true }

[lib]
path = "src/lib.rs"
