[package]
name = "imx-codec-gif"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "GIF image decoder for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-gif"
keywords = ["image", "gif", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
imx-core = { workspace = true }
gif = "0.14.2"

[lib]
path = "src/lib.rs"
