[package]
name = "imx-codec-gif"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "GIF image codec for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-gif"
keywords = ["image", "gif", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
imx-core = { workspace = true }
gif = "0.14.2"
color_quant = "1.1.0"

[lib]
path = "src/lib.rs"
