[package]
name = "imx-codec-jpeg"
version = "0.16.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
imx-core = { workspace = true }
jpeg-decoder = { version = "0.3.2", default-features = false, features = ["platform_independent"] }
jpeg-encoder = "0.7.0"

[lib]
path = "src/lib.rs"
