[package]
name = "imx-codec-jpeg"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "JPEG image decoder and encoder for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-jpeg"
keywords = ["image", "jpeg", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
imx-core = { workspace = true }
jpeg-decoder = { version = "0.3.2", default-features = false, features = ["platform_independent"] }
jpeg-encoder = "0.7.0"
kamadak-exif = { workspace = true }

[lib]
path = "src/lib.rs"
