[package]
name = "imx-codec-png"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "PNG image decoder and encoder for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-png"
keywords = ["image", "png", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
imx-core = { workspace = true }
png = "0.18.1"

[lib]
path = "src/lib.rs"
