[package]
name = "imx-codec-pnm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "PNM (PBM/PGM/PPM) image decoder and encoder for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-pnm"
keywords = ["image", "pnm", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
imx-core = { workspace = true }

[lib]
path = "src/lib.rs"
