[package]
name = "imx-codec-tiff"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "TIFF image decoder and encoder for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-tiff"
keywords = ["image", "tiff", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
imx-core = { workspace = true }
tiff = "0.11.3"

[lib]
path = "src/lib.rs"
