[package]
name = "imx-codec-webp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
description = "WebP image decoder for the imx image toolkit, differentially verified against ImageMagick."
documentation = "https://docs.rs/imx-codec-webp"
keywords = ["image", "webp", "codec", "conversion", "imx"]
categories = ["multimedia::images", "multimedia::encoding"]
license-file = "LICENSE"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
imx-core = { workspace = true }
image-webp = "0.2.4"

[lib]
path = "src/lib.rs"
